# Jason.cli

./: .gitignore  CMakeLists.txt  Cargo.toml  DateTime.cpp  DateTime.h  Input Expressions.md  Log.cpp  Log.h  Makefile  README.md  SupportingModuleLicense.md  a.out
Jason.xcodeproj/: project.pbxproj
exdisj-core/: CMakeLists.txt
jason/: .Makefile.swp
jason-calc/: CMakeLists.txt  jason_calc.pc.in  makefile
jason-calc/include/: Numerics.h  StdCalc.h  VariableType.h
jason-calc/include/Numerics/: Constraints.h  MathVector.h  MathVectorT.tpp  Matrix.h  Scalar.h  ScalarT.tpp
jason-calc/src/: MathVector.cpp  Matrix.cpp  Scalar.cpp  StdCalc.cpp  VariableType.cpp
jason-cli/: main.swift
jason-cli-old/: README.md
jason-cli-old.xcodeproj/project.xcworkspace/xcuserdata/exdisj.xcuserdatad/: UserInterfaceState.xcuserstate
jason-cli.xcodeproj/: project.pbxproj
jason-cli.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
jason-cli/Calc/: Complex.swift  Matrix.swift  Scalar.swift  Vector.swift
jason-cli/Core/: Version.swift
jason-cli/Core/Errors/: CalcErrors.swift
jason-cli/VariableTypes.playground/: Contents.swift
jason-functions/: CMakeLists.txt  makefile
jason-io/: CMakeLists.txt  library.h
jason-lib-test/: ScalarTest.swift
jason-lib/Calc/: Matrix.swift  VariableData.swift
jason-lib/Core/: Logging.swift  Version.swift
jason/src/: CMakeLists.txt  Entry.cpp
jason/src/Calc/: TODO.md  VariableType.h
jason/src/IO/: Package.h
run_variables/: ans
rust-ver/: main.rs  stack.rs
rust-ver/ops/: operators.rs
rust-ver/src/: ._functions  main.rs
rust-ver/src/ops/: parsing.rs
rust-ver/variables/: variable_storage.rs
src/: CMakeLists.txt  Common.cpp  Common.h  DateTime.cpp  DateTime.h  Entry.cpp  IOTester.cpp  IOTester.h  Log.h  Testing.cpp  main.rs  math_types.rs  num_resolver.rs  operators.rs  ops.rs  parsing.rs  stack.rs  testing.rs  variables.rs
src/Calc/: CMakeLists.txt  Complex.h  MathVector.cpp  MathVector.h  Matrix.cpp  Matrix.h  Numerics.h  OperatorException.h  Roadmap.md  Scalar.cpp  Scalar.h  StdCalc.cpp  StdCalc.h  VariableType.cpp  VariableType.h
src/Calc/Function/: CMakeLists.txt  Function.h  FunctionBase.cpp  FunctionBase.h  FunctionIterator.h  FunctionIterator.tpp
src/Calc/Function/Base/: FunctionBase.cpp  FunctionBase.h  FunctionRelation.h
src/Calc/Function/Composite/: CMakeLists.txt  CompositeFunction.h  Polynomial.cpp  Polynomial.h  PolynomialT.tpp  RationalFunction.cpp  RationalFunction.h  RationalFunctionT.tpp
src/Calc/Function/Impls/: Bezier.h  CMakeLists.txt  CoreFunctions.h  GeneralFunctions.cpp  GeneralFunctions.h  MatrixFunction.cpp  MatrixFunction.h  VectorFunction.h
src/Calc/Function/Impls/Core/: CMakeLists.txt  FnMonomial.cpp  PFnMonomial.cpp
src/Calc/Numerics/: CMakeLists.txt  Complex.cpp  Complex.h  Constraints.h  MathVector.cpp  MathVector.h  MathVectorT.tpp  Matrix.cpp  Matrix.h  MatrixT.tpp  Scalar.cpp  Scalar.h  ScalarT.tpp
src/Commands/: CMakeLists.txt  CommandBase.h  CommandMultiValue.cpp  CommandParser.cpp  CommandParser.h  CommandSingleValue.cpp  CommandSpecifier.cpp  CommandSpecifier.h  CommandValue.cpp  CommandValue.h  JasonCommands.h
src/Commands/CommandsCode/: EvaluateCommand.cpp
src/Core/: BinaryUnit.cpp  BinaryUnit.h  BinaryUnit.tpp  CMakeLists.txt  DateTime.cpp  DateTime.h  Log.cpp  Log.h  Result.h  Version.cpp  Version.h
src/Expressions/: CMakeLists.txt  DelimitedExpression.cpp  Expression.cpp  Expression.h  ExpressionElement.h  Operator.cpp  Operator.h  SubExpression.cpp  SubExpression.h
src/IO/: BinaryUnit.cpp  BinaryUnit.h  BinaryUnit.tpp  CMakeLists.txt  FileHandle.cpp  FileHandle.h  IoThread.cpp  IoThread.h  Package.cpp  Package.h  PackageEntry.cpp  PackageEntry.h  PackageEntryIndex.cpp  PackageEntryIndex.h  PackageEntryKey.cpp  PackageEntryKey.h  PackageHandle.cpp  PackageHandle.h  PackageHeader.cpp  PackageHeader.h  PackageIndex.cpp  PackageIndex.h  PackageLink.cpp  PackageLink.h  PackageLinkNode.cpp  PackageLinkNode.h  PackageLinkTree.cpp  PackageLinkTree.h  PackagePager.cpp  PackagePager.h  PackageUtility.h  Session.cpp  Session.h  Test.jason  UnloadedPackage.cpp  UnloadedPackage.h  VarStorage.cpp  VarStorage.h  VarStorageEntry.cpp
src/IO/old/: Package.cpp  Package.h  Session.cpp  Session.h
src/Operators/: CMakeLists.txt  Expression.h  ExpressionElement.h  ExpressionType.h  Operator.cpp  Operator.h  SubExpression.cpp
src/math_types/: matrix.rs  mt_base.rs  scalar.rs  vector.rs
src/ops/: num_resolver.rs  operators.rs  parsing.rs
src/variables/: variable_storage.rs  variable_types.rs
