add_library(IO SHARED
        Package.cpp
        Package.h
        Session.cpp
        Session.h
        PackageEntry.cpp
        PackageEntry.h
        PackageEntryKey.h
        PackageUtility.h
        FileHandle.cpp
        FileHandle.h
        UnloadedPackage.h
        UnloadedPackage.cpp
        PackageHeader.cpp
        PackageHeader.h)